# RT2_Assignment2

./: .gitignore  README.md
data/anchors/: anchors.yaml
data/results/: trials_raw.csv
notebook/: mapping_analysis.ipynb
ros2_ws/src/mapping_experiment/: package.xml  setup.py
ros2_ws/src/mapping_experiment/mapping_experiment/: __init__.py  experiment_node.py  metrics_model.py  package.xml  setup.cfg
